# SimAdmin

./: README.md  uninstall.sh
backend/: Cargo.toml
backend/src/: auth.rs  backup.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  modem_manager.rs  notification.rs  ota.rs  webhook.rs
backend/src/automation/: scheduler.rs
backend/src/automation/tasks/: backup_data.rs  mod.rs
bruno-api/: README.md  get_notification_config.bru  set_notification_config.bru  test_notification_channel.bru
docs/: changelog.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: contracts.ts  current.ts
frontend/src/components/Layout/: Sidebar.tsx  TopBar.tsx
frontend/src/components/backup/: BackupStorageSelector.tsx
frontend/src/pages/: AutomationCenter.tsx  BackupRestore.tsx  Login.tsx  NotificationCenter.tsx  OtaUpdate.tsx  SMS.tsx
frontend/src/pages/Dashboard/hooks/: useDashboardData.ts
frontend/src/pages/automation/: AutomationTaskCard.tsx  AutomationTaskDialog.tsx
frontend/src/pages/notifications/: notificationModel.ts
