[package]
name = "simadmin"
version = "1.0.1"
edition = "2021"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
libc = "0.2"
socket2 = "0.6.1"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
anyhow = "1.0"
lazy_static = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
md5 = "0.7"
base64 = "0.22.1"
percent-encoding = "2.3.2"
ring = "0.17.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
